@@ -45,6 +45,7 @@ DIST readline51-002 1149 RMD160 3eb4a80089d23f05d76f702952f0dbb7ef3ba24d SHA1 fb
 DIST readline51-003 707 RMD160 73d81615e92c8f6f6a4155af571361863014c5df SHA1 fba03ba37b6d9bbc6a612ec602ab1ff6d3038fc2 SHA256 939ea5fb84ff519ae50b9c2749f441a59af9f97ed0bf8fc0981af612ea720160
 DIST readline51-004 2400 RMD160 a1089571a8104ae5ba9d2c36eb600c09654a3d05 SHA1 7295f43a42d112f2de935150d7c0cb2fd3fceece SHA256 ddb050c0161c9ccdabb84c75287fc8cc76791d096ebfb3e4bdc72f531d8551d1
 DIST readline52-001 874 RMD160 0cedb82ccc4709e6b39e6cb95143131259b0e7c5 SHA1 8de77c2de3926893cbf2688912768bed48a2456b SHA256 eac304c369154059f93049ada328739faaf40338d3cb1fb4b544c93d5ce3f8d5
+DIST readline52-002 1433 RMD160 c9bbff4b1ba2ff77e5a43ad98a94f4753e5f0aa3 SHA1 db5baf0129357ba9397dfcd24e9f6db0abdcbc7a SHA256 9deacaef25507a0c2ae0b661bf9342559b59a2954d66ea3c5f5bcd900fdfcf78
 EBUILD readline-5.1_p4.ebuild 2867 RMD160 2bbba2795b671c1c20d1417985adf639ea261574 SHA1 343fa736b9906d1412949fd50be26d0e0ce67dfe SHA256 377199f46bfeac11d91ff07e4e2c2bb1423cc4b94e49516bcaf4c5a914f70de0
 MD5 6e2676f5f010651584f2feb9bf1e211a readline-5.1_p4.ebuild 2867
 RMD160 2bbba2795b671c1c20d1417985adf639ea261574 readline-5.1_p4.ebuild 2867
@@ -57,10 +58,14 @@ EBUILD readline-5.2_p1.ebuild 2866 RMD160 66f2ae6d143e7279501a98024d93786cf0f1e5
 MD5 5ab16c533ab0edd3431f52e914fb2275 readline-5.2_p1.ebuild 2866
 RMD160 66f2ae6d143e7279501a98024d93786cf0f1e554 readline-5.2_p1.ebuild 2866
 SHA256 e7292347f63e087f3c7650c6a0ec4fee6e110532a91907e0a1e4fe4ea2b039e3 readline-5.2_p1.ebuild 2866
-MISC ChangeLog 11716 RMD160 f423cdb247f00f59a2b2f60b89d041cffc918927 SHA1 9b4f420b6a18dda7a0c944258efaceb65974d9e5 SHA256 5eb57e57e33cfdf92631de27d7878cf476f26c69ea28bd21fa9ffa8c261b08bc
-MD5 d7c98847253a047672791cc05d9657d3 ChangeLog 11716
-RMD160 f423cdb247f00f59a2b2f60b89d041cffc918927 ChangeLog 11716
-SHA256 5eb57e57e33cfdf92631de27d7878cf476f26c69ea28bd21fa9ffa8c261b08bc ChangeLog 11716
+EBUILD readline-5.2_p2.ebuild 2865 RMD160 66a8511438a0dd6cc59036e1a04f65c28226463b SHA1 a9cde67d98602af2ccaf625939a98d800be8ccbb SHA256 c6ad8c030c8ec3ea1d13c1e962ecc05956738e31eaedfcf87909ead99bb6c5d3
+MD5 7a4cb7f58eacb7a173424af637fe2f14 readline-5.2_p2.ebuild 2865
+RMD160 66a8511438a0dd6cc59036e1a04f65c28226463b readline-5.2_p2.ebuild 2865
+SHA256 c6ad8c030c8ec3ea1d13c1e962ecc05956738e31eaedfcf87909ead99bb6c5d3 readline-5.2_p2.ebuild 2865
+MISC ChangeLog 11840 RMD160 b984b1e67acfc4042d290cd759df5771c63ed491 SHA1 b4868d1ceff7474f1c0db47b964eca917b556eda SHA256 970a679377e6cae3e556834744108a8786cba20c0ca0d04fe9cae45b1ef0011e
+MD5 2e92f549236d447cc1547a67f7080d94 ChangeLog 11840
+RMD160 b984b1e67acfc4042d290cd759df5771c63ed491 ChangeLog 11840
+SHA256 970a679377e6cae3e556834744108a8786cba20c0ca0d04fe9cae45b1ef0011e ChangeLog 11840
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
@@ -74,3 +79,6 @@ SHA256 d0a1f4592f1031c163cf2edf7a36627eae40de1971b89a9fd998f3850752d075 files/di
 MD5 4486107870b7834bebcb7c4dbd05d265 files/digest-readline-5.2_p1 455
 RMD160 ea5ec5ab739b6d3a4a962099b57749e57d0a2691 files/digest-readline-5.2_p1 455
 SHA256 c205562f5dbadc44dfe9349f3c796faf84fc063b10acac2be007a2d17129fd0a files/digest-readline-5.2_p1 455
+MD5 8e6bbeb2bfaad8219efcf26916179b41 files/digest-readline-5.2_p2 672
+RMD160 241a25444a19607b7ce49468da6e390b80011d6e files/digest-readline-5.2_p2 672
+SHA256 defebbf9ee76b13efab92b8ccafd517ad04dd007594594c4eefdbc1abae15e7e files/digest-readline-5.2_p2 672
