@@ -1,0 +1,9 @@
+MD5 e39331f32ad14009b9ff49cc10c5e751 readline-5.2.tar.gz 2037705
+RMD160 983cbb25192e0a376b80cb2428fe8ee254a041c7 readline-5.2.tar.gz 2037705
+SHA256 12e88d96aee2cd1192500356f0535540db499282ca7f76339fb4228c31249f45 readline-5.2.tar.gz 2037705
+MD5 9d4d41622aa9b230c57f68548ce87d8f readline52-001 874
+RMD160 0cedb82ccc4709e6b39e6cb95143131259b0e7c5 readline52-001 874
+SHA256 eac304c369154059f93049ada328739faaf40338d3cb1fb4b544c93d5ce3f8d5 readline52-001 874
+MD5 f03e512d14206e37f7d6a748b56b9476 readline52-002 1433
+RMD160 c9bbff4b1ba2ff77e5a43ad98a94f4753e5f0aa3 readline52-002 1433
+SHA256 9deacaef25507a0c2ae0b661bf9342559b59a2954d66ea3c5f5bcd900fdfcf78 readline52-002 1433
