@@ -1,6 +1,11 @@
 # ChangeLog for sys-libs/readline
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/readline/ChangeLog,v 1.88 2007/01/13 19:36:31 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/readline/ChangeLog,v 1.89 2007/03/22 06:26:59 vapier Exp $
+
+*readline-5.2_p2 (22 Mar 2007)
+
+  22 Mar 2007; Mike Frysinger <vapier@gentoo.org> +readline-5.2_p2.ebuild:
+  Version bump.
 
   13 Jan 2007; Mike Frysinger <vapier@gentoo.org> readline-4.3-r5.ebuild,
   readline-5.0-r2.ebuild, readline-5.1_p4.ebuild, readline-5.2.ebuild,
